cluster/30-nginx.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.17.3
          name: nginx
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
            - containerPort: 443
              hostPort: 443
              name: https
          securityContext:
            capabilities:
              add: ["NET_BIND_SERVICE"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx
            - name: eth-link-cert
              mountPath: /etc/ssl/eth.link
            - name: ethdns-xyz-cert
              mountPath: /etc/ssl/ethdns.xyz
          resources:
            requests:
              memory: "100Mi"
              cpu: "200m"
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
        - name: eth-link-cert
          secret:
            secretName: eth-link-cert
        - name: ethdns-xyz-cert
          secret:
            secretName: ethdns-xyz-cert
