cluster/coredns-ens.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: coredns
  labels:
    app: coredns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coredns
  template:
    metadata:
      labels:
        app: coredns
    spec:
      containers:
        - name: coredns
          image: wealdtech/coredns-ens:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 53
            - containerPort: 8080
          args:
            - "-conf=/etc/coredns/Corefile"
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/coredns
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 6
            periodSeconds: 6
      volumes:
        - name: config-volume
          configMap:
            name: coredns-config
