cluster/couchdb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - image: couchdb:2.2.0
          name: couchdb
          ports:
            - containerPort: 5984
              name: couchdb
          volumeMounts:
            - name: couchdb-persistent-storage
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-persistent-storage
          persistentVolumeClaim:
            claimName: couchdb-volumeclaim
