cluster/geth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geth
  labels:
    app: geth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geth
  template:
    metadata:
      labels:
        app: geth
    spec:
      containers:
        - name: geth
          image: ethereum/client-go:v1.9.1
          ports:
            - containerPort: 30303
            - containerPort: 8545
              name: http-rpc
            - containerPort: 8546
              name: ws-rpc
          volumeMounts:
            - name: geth-persistent-storage
              mountPath: /opt/geth
          args:
            - "--rpc"
            - "--rpcaddr=0.0.0.0"
            - "--rpccorsdomain=*"
            - "--rpcvhosts=*"
            - "--rpcapi=eth,net,web3,txpool,debug"
            - "--ws"
            - "--wsaddr=0.0.0.0"
            - "--wsorigins=*"
            - "--wsapi=eth,net,web3,txpool,debug"
            - "--datadir=/opt/geth"
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
        - name: metrics
          image: ensdomains/geth-metrics
          imagePullPolicy: Always
      volumes:
        - name: geth-persistent-storage
          persistentVolumeClaim:
            claimName: geth-volumeclaim
