cluster/ipfs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ipfs
  labels:
    app: ipfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipfs
  template:
    metadata:
      labels:
        app: ipfs
    spec:
      containers:
        - image: ipfs/go-ipfs:v0.4.22
          name: ipfs
          ports:
            - containerPort: 4001
              name: ipfs-swarm
            - containerPort: 5001
              name: ipfs-api
            - containerPort: 8080
              name: ipfs-gateway
          volumeMounts:
            - name: ipfs-persistent-storage
              mountPath: /data/ipfs
          resources:
            requests:
              memory: "1Gi"
              cpu: "200m"
      volumes:
        - name: ipfs-persistent-storage
          persistentVolumeClaim:
            claimName: ipfs-volumeclaim
