cluster/xx-end-auctions.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: end-auctions
  labels:
    app: end-auctions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: end-auctions
  template:
    metadata:
      labels:
        app: end-auctions
    spec:
      containers:
        - name: end-auctions
          image: gcr.io/enscluster/end_auctions:latest
          imagePullPolicy: Always
          args:
            - "python3"
            - "/usr/src/app/end_auctions.py"
            - "--network=mainnet"
            - "--privatekey=/etc/keys/privatekey"
            - "--repeat=1800"
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
          volumeMounts:
            - name: privatekey-volume
              mountPath: /etc/keys
      volumes:
        - name: privatekey-volume
          secret:
            secretName: ens-pk
