cluster/20-ipfs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ipfs
  labels:
    app: ipfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipfs
  template:
    metadata:
      labels:
        app: ipfs
    spec:
      containers:
        - image: ipfs/go-ipfs:v0.7.0
          name: ipfs
          ports:
            - containerPort: 4001
              name: ipfs-swarm
            - containerPort: 5001
              name: ipfs-api
            - containerPort: 8080
              name: ipfs-gateway
          volumeMounts:
            - name: ipfs-persistent-storage
              mountPath: /data/ipfs
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /version
              port: ipfs-gateway
            initialDelaySeconds: 6
            periodSeconds: 6
      volumes:
        - name: ipfs-persistent-storage
          persistentVolumeClaim:
            claimName: ipfs-volumeclaim
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs
  labels:
    app: ipfs
spec:
  ports:
  - port: 5001
    protocol: TCP
    name: ipfs-api
  - port: 8080
    protocol: TCP
    name: ipfs-gateway
  selector:
    app: ipfs
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-swarm
  labels:
    app: ipfs
spec:
  ports:
  - port: 4001
    protocol: TCP
  selector:
    app: ipfs
  type: LoadBalancer
  loadBalancerIP: %(cluster_ip)s
