cluster/21-coredns-ens.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: coredns
  labels:
    app: coredns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coredns
  template:
    metadata:
      labels:
        app: coredns
    spec:
      containers:
        - name: coredns
          image: wealdtech/coredns-ens:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 53
            - containerPort: 8080
            - containerPort: 6053
          args:
            - "-conf=/etc/coredns/Corefile"
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/coredns
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 6
            periodSeconds: 6
      volumes:
        - name: config-volume
          configMap:
            name: coredns-config
---
apiVersion: v1
kind: Service
metadata:
  name: coredns-tcp
  labels:
    app: coredns
spec:
  ports:
  - port: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app: coredns
  type: LoadBalancer
  loadBalancerIP: 35.238.190.129
---
apiVersion: v1
kind: Service
metadata:
  name: coredns-udp
  labels:
    app: coredns
spec:
  ports:
  - port: 53
    protocol: UDP
    name: dns-udp
  selector:
    app: coredns
  type: LoadBalancer
  loadBalancerIP: 35.238.190.129
