cluster/coredns-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns-tcp
  labels:
    app: coredns
spec:
  ports:
  - port: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app: coredns
  type: LoadBalancer
  loadBalancerIP: 35.238.190.129
