cluster/coredns-service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns-udp
  labels:
    app: coredns
spec:
  ports:
  - port: 53
    protocol: UDP
    name: dns-udp
  selector:
    app: coredns
  type: LoadBalancer
  loadBalancerIP: 35.238.190.129
