cluster/couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: couchdb
spec:
  type: LoadBalancer
  loadBalancerIP: 10.132.0.4
  ports:
    - port: 5984
  selector:
    app: couchdb
