cluster/geth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth
  labels:
    app: geth
spec:
  ports:
  - port: 8545
    protocol: TCP
    name: http-api
  - port: 8546
    protocol: TCP
    name: ws-api
  selector:
    app: geth
