cluster/ipfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs
  labels:
    app: ipfs
spec:
  ports:
  - port: 5001
    protocol: TCP
    name: ipfs-api
  - port: 8080
    protocol: TCP
    name: ipfs-gateway
  selector:
    app: ipfs
  type: NodePort
